Re-styling del sitio en vistas

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -6,17 +6,20 @@
 
 body {
   font-family: "Oswald", sans-serif;
+}
+
+.all-index {
+  background-color: white;
+  width: 100%;
+  margin: auto;
+}
+
+.bg-c-blue {
   background-color: rgb(49, 71, 92);
 }
 
-main {
-  background-color: rgb(49, 71, 92);
-}
-.all-index {
-  background-color: white;
-  padding: 10px;
-  width: 90%;
-  margin: auto;
+.yw-txt {
+  color: rgb(248, 212, 92);
 }
 
 .header-top a {
@@ -32,7 +35,6 @@ main {
 .header-top {
   display: flex;
   justify-content: space-between;
-  align-items: center;
   text-align: center;
   padding: 10px;
   flex-wrap: wrap;
@@ -72,10 +74,10 @@ main {
   display: flex;
   justify-content: space-between;
   padding: 10px;
-  border: 10px black double;
+  /* border: 10px black double; */
   margin: auto;
   width: 90%;
-  font-size: 1.5em;
+  font-size: 1.5rem;
 }
 
 .social {
@@ -103,8 +105,11 @@ main {
   font-size: 1.1em;
 }
 
-.login a {
-  color: rgb(248, 212, 92);
+.nav-login a{
+  text-decoration: none;
+}
+
+.nav-login a:visited{
   text-decoration: none;
 }
 
@@ -112,9 +117,7 @@ main {
   color: rgb(248, 212, 92);
 }
 .categories {
-  display: flex;
   width: 40%;
-  justify-content: space-around;
 }
 
 .fa-chevron-down {
@@ -137,9 +140,7 @@ main {
 .fa-facebook-f {
   color: rgb(66, 103, 178);
 }
-.fa-envelope {
-  color: rgb(216, 215, 215);
-}
+
 .login {
   display: flex;
   width: 30%;
@@ -160,16 +161,19 @@ main {
   padding: 3px;
   width: 90%;
   font-weight: 700;
+  color: #333;
 }
 
 .services-carousel {
-  width: 95%;
-  height: 7em;
   margin: auto;
   text-align: center;
   margin-top: 20px;
-  border: 10px black double;
 }
+
+.services-carousel img {
+  width: 100%;
+}
+
 .dot-carousel {
   width: 30%;
   text-align: center;
@@ -188,19 +192,22 @@ main {
 .work-with-us-button {
   margin: auto;
   padding: 15px;
-  width: 80%;
+  width: 100%;
   text-align: center;
 }
 .work-with-us-button button {
+  margin: 0.5rem auto;
+  display: block;
   font-size: 14px;
   border-radius: 5px;
+  border: none;
   background-color: rgb(49, 71, 92);
   color: rgb(248, 212, 92);
   /* box-shadow: 8px 8px 5px rgb(248, 212, 92); */
-  width: 95%;
   padding: 10px;
 }
 .work-with-us-button button:hover {
+  background-color: hsl(209,43,39);
   box-shadow: 6px 6px 30px rgb(248, 212, 92);
 }
 
@@ -208,6 +215,7 @@ main {
   margin-top: 60px;
   margin-bottom: 10px;
   text-align: center;
+  color: #333;
 }
 .icon-categories {
   display: flex;
@@ -215,63 +223,70 @@ main {
   justify-content: space-around;
 }
 .icon-article {
-  width: 40%;
-  max-width: 200px;
+  color: rgb(49, 71, 92);
+  width: 35%;
+  max-width: 150px;
   text-align: center;
   font-size: 36px;
-  margin: 10px;
-  border: 10px rgb(49, 71, 92) double;
+  margin: 1rem;
+  box-shadow: 0px 0px 5px 1px #333;
+  padding: 33px;
+  border-radius: 25%;
+}
+
+.icon-article a {
+  text-decoration: none;
+  color: rgb(49, 71, 92);
 }
 
 .icon-txt {
   font-size: 16px;
-  background-color: rgb(49, 71, 92);
-  color: rgb(248, 212, 92);
   font-weight: 400;
-  text-decoration: underline;
 }
-.fa-wrench {
-  color: black;
+/* .fa-wrench {
+  color: rgb(248, 212, 92);
   font-weight: 800;
 }
 .fa-plug {
-  color: black;
+  color: rgb(248, 212, 92);
   font-weight: 800;
 }
 .fa-tooth {
-  color: black;
+  color: rgb(248, 212, 92);
   font-weight: 800;
 }
 .fa-faucet {
-  color: black;
+  color: rgb(248, 212, 92);
 }
 .fa-hammer {
-  color: black;
+  color: rgb(248, 212, 92);
   font-weight: 800;
 }
 .fa-paint-roller {
-  color: black;
+  color: rgb(248, 212, 92);
   font-weight: 800;
-}
+} */
 
 .ad {
-  width: 95%;
-  height: 7em;
   margin: auto;
   text-align: center;
   margin-top: 20px;
-  border: 10px black double;
   background-color: white;
+}
+
+.ad img {
+  width: 100%;
 }
 
 .partner-companies {
-  width: 95%;
-  height: 7em;
   margin: auto;
   text-align: center;
   margin-top: 20px;
-  border: 10px black double;
   background-color: white;
+}
+
+.partner-companies img {
+  width: 100%;
 }
 
 .footer {
@@ -279,6 +294,7 @@ main {
 }
 
 .phrase-footer {
+  color: #333;
   text-align: center;
   margin-top: 20px;
   margin-bottom: 10px;
@@ -297,27 +313,21 @@ main {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
-  width: 95%;
   justify-content: space-evenly;
-  font-size: 16px;
-  max-width: 500px;
+  font-size: 14px;
+}
+
+.list-footer li {
+  padding: 0.5rem 1rem;
 }
 
 .Copyright {
+  margin-left: 1rem;
+  color: #333;
   font-size: 0.8em;
   margin-top: 10px;
 }
 
-.errors { 
-  margin: auto;
-color: rgb(255, 0, 0);
-  text-align: center;
-  display: flex;
-  flex-wrap: wrap;
-  
-  width: 90%;
-  padding: 20px;
-  max-width: 700px;
-  background-color: white;;
-font-size: 25px;
-font-weight: 400;}
+.c333 {
+  color: #333;
+}
