--- a/views/partials/ad-bottom-body.ejs
+++ b/views/partials/ad-bottom-body.ejs
@@ -1,10 +1,11 @@
 <section class="ad">
-    <p>Publicidad Animada</p>
+    <img src="./images/painter-banner.jpeg" alt="advertisement">
 </section>
 <section class="partner-companies">
-    <p>empresas que confiaron en nosotros</p>
-    <p>Logos de empresas</p>
+    <p>Confían en nosotros</p>
+    <img src="./images/partners-slide.jpg" alt="partners logos">
 </section>
+<!--
 <div class="dot-carousel">
     <p><i class="fas fa-ellipsis-h"></i></p>
-</div>
+</div> -->
