--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,6 +2,32 @@
     <div>
         <h4 class="phrase-footer">Servicios para Empresas y Pymes</h4>
     </div>
+    <div class="header-bottom">
+        <div class="social">
+            <div class="logo-ig"><i class="fab fa-instagram"></i></div>
+            <div class="logo-face">
+                <i class="fab fa-facebook-f"></i>
+            </div>
+            <div class="logo-twitter">
+                <i class="fab fa-twitter"></i>
+            </div>
+            <div class="logo-youtube">
+                <i class="fab fa-youtube"></i>
+            </div>
+        </div>
+        <div>
+            <p class="top-title-per-device">La Solución que Buscás, con el Profesionalismo que Necesitás</p>
+            <!-- modificar tamaño per device -->
+        </div>
+        <div class="icon-contact">
+            <div class="logo-gmail c333">
+                <i class="fas fa-envelope"></i>
+            </div>
+            <div class="logo-whatsapp">
+                <i class="fab fa-whatsapp"></i>
+            </div>
+        </div>
+    </div>
     <section>
         <div class="titles-footer">
             <ul class="list-footer">
@@ -14,8 +40,7 @@
             </ul>
         </div>
         <div class="Copyright">
-            <p>Copyright © 2021-2021</p>
-            <p>Calle Falsa 123, Springfield</p>
+            <p>Copyright © 2021-2021    |    Calle Falsa 123, Springfield   |   Grupo7 devs</p>
         </div>
     </section>
 </footer>
