--- a/public/css/desktop-index.css
+++ b/public/css/desktop-index.css
@@ -15,7 +15,7 @@
     padding: 5px;
   }
   .top-phrase i {
-    padding: 15px;
+    padding: 0px 15px;
   }
 
   .search-bar input {
@@ -38,7 +38,7 @@
     display: none;
   }
   main {
-    padding-top: 20px;
+    padding: 1rem 0;
   }
 
   .work-with-us-button {
@@ -53,7 +53,7 @@
     background-color: rgb(49, 71, 92);
     color: rgb(248, 212, 92);
     /* box-shadow: 8px 8px 5px rgb(248, 212, 92); */
-    width: 95%;
+    max-width: 600px;
     padding: 10px;
   }
   .work-with-us-button button:hover {
@@ -66,18 +66,21 @@
     font-size: 36px;
   }
   .icon-article {
-    width: 40%;
+    width: 25%;
     max-width: 200px;
     text-align: center;
     font-size: 36px;
-    margin: 10px;
-    border: 10px rgb(49, 71, 92) double;
+    /* margin: 10px; */
+    /* border: 10px rgb(49, 71, 92) double; */
+  }
+
+  .icon-article:hover {
+    box-shadow: 0px 0px 7px 3px #333;
   }
 
   .icon-txt {
-    font-size: 16px;
-    background-color: rgb(49, 71, 92);
-    color: rgb(248, 212, 92);
+    font-size: 1.5rem;
+    color: rgb(49, 71, 92);
     font-weight: 400;
   }
 }
