--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,8 @@
 
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/theme.css" />
+    <link rel="stylesheet" href="/css/header.css" />
+    <link rel="stylesheet" href="/css/footer.css" />
     <link rel="stylesheet" href="/css/tablet.css" />
     <link rel="stylesheet" href="/css/tablet-index.css" />
     <link rel="stylesheet" href="/css/desktop-index.css" />
@@ -20,7 +22,7 @@
 <body>
 
   <%- include("partials/header") %>
-    <%- include("partials/nav-bar") %>
+  <%- include("partials/nav-bar") %>
 
       <main>
         <div class="all-index">
@@ -44,7 +46,7 @@
           <%- include("partials/categories-examples") %>
 
 
-            <%- include("partials/ad-bottom-body") %>
+          <%- include("partials/ad-bottom-body") %>
 
         </div>
       </main>
