--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,42 +1,17 @@
-<header class="header-ppal">
+<header class="header-ppal bg-c-blue">
     <div class="header-top">
-        <a href="/"><img src="/images/logo-soluciones-profesionales.png" alt="logo sin fondo" /></a>
-        <div class="search-bar">
-            <input type="text" name="search-item">
+        <a href="/"><img src="/images/logo-fondo-azul.svg" alt="logo sin fondo" /></a>
+        <div class="search-bar"> 
+            <input type="text" name="search-item" placeholder="Buscá por oficio, profesión, zona... ">
             <button class="search-button"><i class="fas fa-search"></i></button>
         </div>
         <div class="top-phrase">
 
-            <p><i class="fas fa-handshake"></i>Reservá Sin Problemas,</p>
-            <p>Cancela Sin Costo Agregado<i class="fas fa-handshake-slash"></i></p>
+            <p><i class="fas fa-handshake"></i>Reservá sin demoras</p>
+            <p>Cancela sin costo<i class="fas fa-handshake-slash"></i></p>
 
         </div>
     </div>
-    <div class="header-bottom">
-        <div class="social">
-            <div class="logo-ig"><i class="fab fa-instagram"></i></div>
-            <div class="logo-face">
-                <i class="fab fa-facebook-f"></i>
-            </div>
-            <div class="logo-twitter">
-                <i class="fab fa-twitter"></i>
-            </div>
-            <div class="logo-youtube">
-                <i class="fab fa-youtube"></i>
-            </div>
-        </div>
-        <div>
-            <p class="top-title-per-device">La Solución que Buscás, con el Profesionalismo que Necesitás</p>
-            <!-- modificar tamaño per device -->
-        </div>
-        <div class="icon-contact">
-            <div class="logo-gmail">
-                <i class="fas fa-envelope"></i>
-            </div>
-            <div class="logo-whatsapp">
-                <i class="fab fa-whatsapp"></i>
-            </div>
-        </div>
-    </div>
+
 
 </header>
