--- a/views/users/registerClients.ejs
+++ b/views/users/registerClients.ejs
@@ -57,7 +57,7 @@
             </label>
           </div>
           <div class="registerInput">
-            <label for="dni">DNI:
+            <label for="dni">DNI (Revisar ya q no se puede cambiar):
               <input type="number" name="dni" id="dni" placeholder="Documento Nacional de Identidad">
             </label>
           </div>
