Solucionado bug que ocasionaba crash con credenciales invalidas. Estilos a los errores. Implementado Delete al cliente

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -331,3 +331,10 @@ body {
 .c333 {
   color: #333;
 }
+
+.errors {
+  text-align: center;
+  color: darkred;
+  padding-top: 1rem;
+  font-weight: 600;
+}
