Logout implementado. Agregado estilos de header y footer a vistas en carpetas de professionals y users

--- a/views/partials/ad-bottom-body.ejs
+++ b/views/partials/ad-bottom-body.ejs
@@ -1,9 +1,9 @@
 <section class="ad">
-    <img src="./images/painter-banner.jpeg" alt="advertisement">
+    <img src="/images/painter-banner.jpeg" alt="advertisement">
 </section>
 <section class="partner-companies">
     <p>Confían en nosotros</p>
-    <img src="./images/partners-slide.jpg" alt="partners logos">
+    <img src="/images/partners-slide.jpg" alt="partners logos">
 </section>
 <!--
 <div class="dot-carousel">
