--- a/views/professionals/deleteProf.ejs
+++ b/views/professionals/deleteProf.ejs
@@ -7,6 +7,8 @@
 
         <link rel="stylesheet" href="/css/style.css" />
         <link rel="stylesheet" href="/css/theme.css" />
+        <link rel="stylesheet" href="/css/header.css" />
+        <link rel="stylesheet" href="/css/footer.css" />
         <link rel="stylesheet" href="/css/tablet-index.css" />
         <link rel="stylesheet" href="/css/tablet.css" />
         <link rel="stylesheet" href="/css/desktop-index.css" />
