--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -113,6 +113,14 @@ body {
   text-decoration: none;
 }
 
+.nav-login .login .session-icons {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  width: 4rem;
+}
+
 .fa-shopping-cart {
   color: rgb(248, 212, 92);
 }
