--- a/views/partials/nav-bar.ejs
+++ b/views/partials/nav-bar.ejs
@@ -18,15 +18,21 @@
                     <p class="txt-ingresar">Ingresar</p>
                 </a>
                 <% }else if(locals.userClient !=undefined){ %>
-                    <div>
+                    <div class="session-icons">
                         <a href="/clients/<%= locals.userClient.dni %>">
-                            <p><i class="fas fa-user"></i> <i class="fas fa-chevron-down"></i></p>
+                            <p class="yw-txt"><i class="fas fa-user"></i></p>
+                        </a>
+                        <a href="/signout">
+                            <p class="yw-txt"><i class="fas fa-sign-out-alt"></i></p>
                         </a>
                     </div>
                     <% }else if(locals.userProf !=undefined){ %>
-                        <div>
+                        <div class="session-icons">
                             <a href="/rubros/<%= locals.userProf.jobTitle %>/<%= locals.userProf.cuit %>">
-                                <p><i class="fas fa-user"></i> <i class="fas fa-chevron-down"></i></p>
+                                <p><i class="fas fa-user"></i></p>
+                            </a>
+                            <a href="/signout">
+                                <p><i class="fas fa-sign-out-alt"></i></p>
                             </a>
                         </div>
 
