--- a/views/professionals/profManagement.ejs
+++ b/views/professionals/profManagement.ejs
@@ -7,6 +7,8 @@
 
         <link rel="stylesheet" href="/css/style.css" />
         <link rel="stylesheet" href="/css/theme.css" />
+        <link rel="stylesheet" href="/css/header.css" />
+        <link rel="stylesheet" href="/css/footer.css" />
         <link rel="stylesheet" href="/css/productDetail.css" />
         <link rel="stylesheet" href="/css/tablet-productDetail.css" />
         <link rel="stylesheet" href="/css/tablet.css" />
