--- a/views/users/registerClients.ejs
+++ b/views/users/registerClients.ejs
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/theme.css" />
+    <link rel="stylesheet" href="/css/header.css" />
+    <link rel="stylesheet" href="/css/footer.css" />
     <link rel="stylesheet" href="/css/register.css" />
     <link rel="stylesheet" href="/css/tablet-index.css" />
     <link rel="stylesheet" href="/css/tablet.css" />
